opravena validace na vstup hodnoty limit